Set up a larger APPTAINER_TMPDIR to avoid running out of space

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,2 @@
 test:
-	stimela run example_recipe.yml tart=mu-udm ms=udm.ms
+	APPTAINER_TMPDIR=~/tmp stimela run example_recipe.yml tart=mu-udm ms=udm.ms
