Update example recipe. See Issue #1

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,8 @@
 test:
-	APPTAINER_TMPDIR=~/tmp stimela run example_recipe.yml tart=mu-udm ms=udm.ms
+	APPTAINER_TMPDIR=~/tmp stimela run example_recipe.yml tart=mu-udm
+
+clean:
+	rm -f *.svg
+	rm -f *.hdf
+	rm -rf *.ms
+	rm -f *.h5 *.txt *.deps *.full
