--- a/.github/workflows/deploy_module.yaml
+++ b/.github/workflows/deploy_module.yaml
@@ -4,30 +4,41 @@ on:
   push:
     tags: [ 'v*.*.*' ]
 
-jobs:
-  build-n-publish:
-    name: Build and publish tart_cargo to PyPI and TestPyPI
+  release-build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@main
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Install pypa/build
-      run: |
-        python -m pip install --upgrade pip 
-        pip install build
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
-    - name: Publish distribution to PyPI
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_TART_CARGO_TOKEN }}
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: build release distributions
+        run: |
+          # NOTE: put your own distribution build steps here.
+          python -m pip install poetry
+          poetry build
+
+      - name: upload windows dists
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-dists
+          path: dist/
+
+  pypi-publish:
+    runs-on: ubuntu-latest
+    needs:
+      - release-build
+    permissions:
+      id-token: write
+
+    steps:
+      - name: Retrieve release distributions
+        uses: actions/download-artifact@v4
+        with:
+          name: release-dists
+          path: dist/
+
+      - name: Publish release distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@v1
