--- a/.github/workflows/deploy_module.yaml
+++ b/.github/workflows/deploy_module.yaml
@@ -21,16 +21,21 @@ jobs:
           python -m pip install poetry
           poetry build
 
-      - name: upload windows dists
+      - name: Store the distribution pakages
         uses: actions/upload-artifact@v4
         with:
           name: release-dists
           path: dist/
 
   pypi-publish:
+    name: Publish module to PyPI
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     runs-on: ubuntu-latest
     needs:
       - release-build
+    environment:
+      name: pypi
+      url: https://pypi.org/tmolteno/tart_cargo
     permissions:
       id-token: write
 
@@ -42,4 +47,4 @@ jobs:
           path: dist/
 
       - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@v1
+        uses: pypa/gh-action-pypi-publish@release/v1
