Update project URL

--- a/.github/workflows/deploy_module.yaml
+++ b/.github/workflows/deploy_module.yaml
@@ -35,7 +35,7 @@ jobs:
       - release-build
     environment:
       name: pypi
-      url: https://pypi.org/tmolteno/tart_cargo
+      url: https://pypi.org/projects/tart_cargo
     permissions:
       id-token: write
 
