--- a/tartcargo/tart-download-data.yml
+++ b/tartcargo/tart-download-data.yml
@@ -29,7 +29,7 @@ cabs:
                 info: Set the name of the output file
             dir:
                 dtype: Directory
-                default: false
+                default: '.'
                 must_exist: true
                 info: local directory to download, default .
             pw:
