Added a spotless cab with a proper name

--- a/tartcargo/spotless.yml
+++ b/tartcargo/spotless.yml
@@ -53,7 +53,7 @@
     - genesis/tart-cargo-base.yml
 
 cabs:
-    disko:
+    spotless:
         name: spotless
         image:
             _use: vars.tart-cargo.images
