--- a/test/example_recipe.yml
+++ b/test/example_recipe.yml
@@ -58,7 +58,7 @@ tart-image:
             cab: disko
             params:
                 ms: =recipe.ms
-                HDF: '{recipe.tart}.h5'
+                HDF: '{recipe.tart}-disko.sphere'
                 healpix: true
                 fov: 170deg
                 res: 0.5deg
@@ -66,9 +66,28 @@ tart-image:
                 alpha: 0.006
                 l1-ratio: 0.02
 
-        project-image:
+        disko-draw:
             cab: disko-draw
             params:
-                hdf: '{recipe.tart}.h5'
+                hdf: '{recipe.tart}-disko.sphere'
                 show-sources: true
-                SVG: =recipe.svg
+                SVG: 'disko-{recipe.svg}'
+
+        spotless-image:
+            cab: spotless
+            params:
+                ms: =recipe.ms
+                HDF: '{recipe.tart}-spotless.sphere'
+                multimodel: true
+                healpix: true
+                fov: 170deg
+                res: 0.5deg
+
+        spotless-draw:
+            cab: disko-draw
+            params:
+                hdf: '{recipe.tart}-disko.sphere'
+                show-sources: true
+                SVG: 'spotless-{recipe.svg}'
+
+
