Update to latest tools. Add a new tart-get-archive-data cab. Add a movie example

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,6 +3,9 @@ TART=tart-kenya
 test:
 	APPTAINER_TMPDIR=~/tmp stimela run example_recipe.yml tart=${TART}
 
+movie:
+	APPTAINER_TMPDIR=~/tmp stimela run make-movie.yml tart-movie tart=${TART}
+
 clean:
 	rm -f *.svg
 	rm -f *.hdf
