Add the column arguments to disko and spotless

--- a/tartcargo/disko.yml
+++ b/tartcargo/disko.yml
@@ -15,6 +15,10 @@ cabs:
                 dtype: MS
                 required: true
                 info: The measurement set
+            column:
+                dtype: str
+                default: DATA
+                info: The measurement set column to image
             nvis:
                 dtype: int
                 default: 1000
